fix: double scrollbar

--- a/apps/gauzy/src/app/pages/users/users.component.scss
+++ b/apps/gauzy/src/app/pages/users/users.component.scss
@@ -66,3 +66,30 @@
   justify-content: space-around;
   display: flex;
 }
+
+:host {
+
+  nb-card,
+  nb-card-body {
+    background-color: nb-theme(gauzy-card-2);
+  }
+
+  nb-card {
+    height: calc(100vh - 13rem);
+  }
+
+
+  nb-card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: unset;
+    max-height: calc(100vh - 22.4rem);
+    border-radius: 0 0 nb-theme(border-radius) nb-theme(border-radius);
+
+    .table-scroll {
+      flex-grow: 10;
+      overflow: auto;
+    }
+  }
+}
